Disable clipping temporarily to fix a bug in Chrome 63.

Clipping will be re-enabled with a more robust solution for
newer versions of chrome, that will expose both the clipped
and unclipped bounds to ChromeVox.

Bug: 786164
Change-Id: Ia22fc00236168f9ba41841f6810b72bdd24d4612